# hstream

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  Dockerfile  README  README.md  agents.md  architecture.md  buiild.sh  example.py  example_server.py  main.py  monpush.fish  pyproject.toml  scope_analysis.py  setup.py  test.py  test_custom_component.py
.github/workflows/: python-app.yml
contribution_docs/: update_strategies.md
demo/: custom_styling.py  error_handling.py  example.py  example_dataframe.py  example_server.py  file upload.py  multiselect_example.py  nav_bar.py  select.md  select_example.py  static_files.md  theming.md
docs/contribution/: update_strategies.md
docs/features/: eject.md  example.md
docs_for_sl/: button.md
hstream/: HSServer.py  __init__.py  __main__.py  cli.py  components.py  css_frameworks.py  hs.py  hstream.py  requirements.txt  run.py  runner.py  template.py  utils.py
hstream/components/: components.py  shoelace_components.py  styling_components.py
hstream/components/shoelace/: card.py  format_date.py
hstream/django_server/: manage.py
hstream/django_server/hs/: apps.py  session_utils.py  urls.py  views.py
hstream/django_server/root/: asgi.py  settings.py  urls.py  wsgi.py
hstream/templates/: error_html.html  format_html.html  header.html  main.html
hstream/test/: button_test_page.py  image_test_page.py  slider_test_page.py  test_component_reactivity.py
hyperstream/: __init__.py  __main__.py  components.py  hstag.py  hyperstream.py  runner.py
templates/: header.html  main.html
templates/components/: ImageComponent.html  TextInput.html
tests/: 1_basic_test.py  conftest.py  file_to_run.py  test_diff_strategies.py
