[project]
name = "hstream"
dynamic = ["version"]
description = ""
authors = [{ name = "Conrad", email = "conradbez1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "yattag>=1.15.2",
    "markdown>=3.6",
    "beautifulsoup4>=4.12",
    "django>=5.0.6",
]

[project.scripts]
hstream = "hstream.cli:cli"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "hstream/_version.py"

[tool.uv]
dev-dependencies = [
    "black>=24.4.2",
    "ipykernel>=6.29.4",
    "pandas>=2.2.2",
    "ipdb>=0.13.13",
    "isort>=5.13.2",
    "pre-commit>=3.7.1",
    "ruff>=0.4.4",
    "pytest>=8.2.0",
    "python-dotenv>=1.0.1",
    "playwright>=1.43.0",
    "pytest-rerunfailures>=14.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
